# compliance-assess

./: .gitignore  CLAUDE.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: container-build.yaml  lint.yaml  release.yaml  test.yaml
action/: requirements-hashed.txt
docs/: github-action.md  quickstart.md  rule-precision.md  supported-languages.md
src/compliance_assess/: __init__.py  assessor.py  cli.py  detection.py  emitters.py  exceptions.py  models.py  pdf.py  result.py
tests/: conftest.py
tests/fixtures/: sarif-schema-2.1.0.json
tests/fixtures/corpus/js-false-positive/: browser_storage.ts  sql_in_log.ts
tests/fixtures/corpus/pii-in-logs/: negative.py  negative.ts  positive.py  positive.ts
tests/fixtures/corpus/semgrep-positive/: delete_user.py  raw_sql_delete.py  raw_sql_delete.ts  user_admin.ts
tests/fixtures/sample-app/: README.md  REMEDIATION.md  requirements.txt
tests/fixtures/sample-app/backend/: __init__.py  auth.py  logging_config.py  main.py  models.py  users.py
tests/fixtures/sample-app/frontend/: app.js
tests/integration/: test_action_yaml.py  test_cli_e2e.py  test_semgrep_real.py
tests/unit/: test_assessor.py  test_cli.py  test_csv.py  test_detection.py  test_emitters.py  test_imports.py  test_medium_fixes.py  test_pdf.py  test_sarif_schema.py
