[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-assess"
version = "0.2.0"
description = "Static and runtime assessor for privacy, AI governance, and anti-spam compliance gaps"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "typer>=0.12",
    "structlog>=24.0",
]

[project.optional-dependencies]
# oscal extra: pull in for P2-T02 OSCAL Assessment Result work via `pip install compliance-assess[oscal]`
oscal = [
    "compliance-trestle>=2.0",
]
# pdf extra: branded, client-ready PDF report output via `pip install compliance-assess[pdf]`
pdf = [
    "reportlab>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "jsonschema>=4.0",
    "types-jsonschema",
    "types-PyYAML",
    "semgrep==1.163.0; sys_platform != 'win32'",
    "reportlab>=4.0",
]

[project.scripts]
compliance-assess = "compliance_assess.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_assess"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
exclude = ["tests/fixtures/sample-app", "tests/fixtures/corpus"]

# ReportLab (optional 'pdf' extra) ships no type stubs.
[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/fixtures/sample-app", "tests/fixtures/corpus"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
